Fix some unchecked and deprecation warnings